# advanced_software_system

./: .gitignore  .pre-commit-config.yaml  README.md  Tiltfile  pyproject.toml
LLM Knowledge/: Context truncate.md  Good resources.md  LLM Agent.md  LLM Evaluation.md  LLM Settings.md  Prompt Engineering.md
src/chaos-mesh/: experiment_1.yml
src/client/: client.py  pyproject.toml
src/deployment/: inf.yml  preproc.yml  web.yml
src/inference-server/: Dockerfile  inference.py  pyproject.toml  run_server.sh
src/oce-agent/: pyproject.toml  simple_agent.py
src/oce-agent/results/with-tools/GPT3.5/: res_2.txt
src/oce-agent/results/with-tools/codellama/: res_3.txt
src/oce-agent/results/with-tools/llama3.2/: res_2.txt  res_3.txt  res_4.txt
src/oce-agent/results/with-tools/mistral/: res_3.txt  res_4.txt
src/oce-agent/results/with-tools/stable-code/: res_2.txt
src/oce-agent/results/zero-shot/GPT3.5/: res_3.txt
src/oce-agent/results/zero-shot/GPT4o/: res_2.txt  res_3.txt  res_5.txt
src/oce-agent/results/zero-shot/codellama/: res_2.txt  res_4.txt
src/oce-agent/results/zero-shot/llama3.2/: res_1.txt  res_2.txt  res_4.txt  res_5.txt
src/oce-agent/results/zero-shot/mistral/: res_2.txt  res_3.txt
src/oce-agent/results/zero-shot/phi3/: res_3.txt  res_5.txt
src/oce-agent/results/zero-shot/phi3-medium/: res_2.txt  res_3.txt  res_4.txt  res_5.txt
src/pre-processor/: Dockerfile  preprocessor.py  pyproject.toml  run_server.sh
src/scripts/: install_chaos_mesh.sh  prom-grafana.sh  start_minikube.sh
src/sre-agent/: agent_with_python_repl.py
src/sre-agent/results/with-tools/GPT3.5/: res_1.txt
src/sre-agent/results/with-tools/GPT4o/: res_4.txt
src/sre-agent/results/with-tools/codellama/: res_5.txt
src/sre-agent/results/with-tools/llama3.2/: res_1.txt  res_5.txt
src/sre-agent/results/zero-shot/: prompt.txt
src/sre-agent/traces/: normal-traces-minified-1.json  spiked-traces-minified-1.json
src/web-server/: Dockerfile  pyproject.toml  run_server.sh  web_server.py
src/web-server/helpers/: custom_logger.py
(+21 files in other folders)
