[project]
name = "sre-agent"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "nguu0123", email = "nguu0123@gmail.com" }]
dependencies = [
    "autogen[retrievechat]>=0.3.1",
    "langchain>=0.3.7",
    "langchain-community>=0.3.7",
    "langchain-chroma>=0.1.4",
    "langchain-openai>=0.2.9",
    "jq>=1.8.0",
    "genson>=1.3.0",
    "langchain-huggingface>=0.1.2",
    "langchain-ollama>=0.2.0",
    "langchain-text-splitters>=0.3.2",
    "devtools>=0.12.2",
    "langgraph>=0.2.53",
    "langchain-experimental>=0.3.3",
    "langsmith>=0.1.147",
    "langchain-anthropic>=0.3.0",
]
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["*.py"]
